fig file names correction

--- a/TerraSoul.html
+++ b/TerraSoul.html
@@ -16,7 +16,7 @@
 
 <body>
             <div class="barra">
-              <a href="TerraSoul.html" target="_self"><img src="Imagens/Logo TS.jpg" width="90px" height="90px"></a>
+              <a href="TerraSoul.html" target="_self"><img src="imagens/Logo TS.jpg" width="90px" height="90px"></a>
                 <ul>
                   <li><a href="about.html" target="_self">Quem somos</a></li>
                   <li><a href="porque.html" target="_self">Por que usar comésticos naturais</a></li>
@@ -29,14 +29,14 @@
           <div class="row">
               <div class="col-xs-12 col-sm-6 col-md-4">   
               <div class="card">  
-                <img src="Imagens/livro 2.png" alt="livro" width="100">
+                <img src="imagens/livro 2.png" alt="livro" width="100">
                 <h3>Embasamento científico</h3>
                 <p>Produtos elaborados com embasamento científico e um rígido controle de qualidade</p>
               </div>
             </div>
             <div class="col-xs-12 col-sm-6 col-md-4">
               <div class="card">
-                <img src="Imagens/folha.png" alt="folha" width="100">
+                <img src="imagens/folha.png" alt="folha" width="100">
                 <h3>Matérias-primas naturais</h3>
                 <p>Desenvolvidos com matérias-primas naturais, da biodiversidade brasileira e matérias-primas sintéticas seguras</p>
               </div>  
@@ -57,7 +57,7 @@
             </div>
             <div class="col-xs-12 col-sm-6 col-md-4">
               <div class="card" id="plantas">
-                <img src="Imagens/plantas.png" alt="plantas brasileiras" width="250">
+                <img src="imagens/plantas.png" alt="plantas brasileiras" width="250">
               </div>  
             </div>
             <div class="col-xs-12 col-sm-6 col-md-4">
