--- a/produtos.html
+++ b/produtos.html
@@ -16,13 +16,13 @@
 
 <body>
 	<div class="barra">
-              <a href="TerraSoul.html" target="_self"><img src="Imagens/Logo TS.jpg" width="90px" height="90px"></a>
+              <a href="TerraSoul.html" target="_self"><img src="imagens/Logo TS.jpg" width="90px" height="90px"></a>
                 <ul>
                   <li><a href="about.html">Quem somos</a></li>
                   <li><a href="porque.html">Por que usar comésticos naturais</a></li>
                   <li><a href="produtos.html">Produtos</a></li>
                   <li><a href="onde.html">Onde encontrar</a></li>
-                  <li><a href=file:///C:/Users/biaca/Desktop/Programação/Projeto%20TS/Catálogo%202019.pdf target="_blank">Catálogo</a></li>
+                  <li><a href="catalogo.pdf" target="_blank">Catálogo</a></li>
                 </ul>
     </div>
         
