--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 	<div class="barra">
-              <a href="TerraSoul.html" target="_self"><img src="imagens/Logo TS.jpg" width="90px" height="90px"></a>
+              <a href="index.html" target="_self"><img src="imagens/Logo TS.jpg" width="90px" height="90px"></a>
                 <ul>
                   <li><a href="about.html">Quem somos</a></li>
                   <li><a href="porque.html">Por que usar comésticos naturais</a></li>
