--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                   <li><a href="porque.html" target="_self">Por que usar comésticos naturais</a></li>
                   <li><a href="produtos.html" target="_self">Produtos</a></li>
                   <li><a href="onde.html" target="_self">Onde encontrar</a></li>
-                  <li><a href=file:///C:/Users/biaca/Desktop/Programação/Projeto%20TS/Catálogo%202019.pdf target="_blank">Catálogo</a></li>
+                  <li><a href='catalogo.pdf' target="_blank">Catálogo</a></li>
                 </ul>
               </div>
       <div class="container">
